bnfc/test/ParTst.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.18.10 from .\ParTst.y
-----------------------------------------------------------------------------

state 5 contains 1 shift/reduce conflicts.
state 63 contains 1 shift/reduce conflicts.
state 147 contains 1 shift/reduce conflicts.
state 148 contains 1 shift/reduce conflicts.
state 149 contains 1 shift/reduce conflicts.
state 185 contains 1 shift/reduce conflicts.
state 221 contains 1 shift/reduce conflicts.

terminal L_err is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Integer -> L_integ                                 (1)
	Double -> L_doubl                                  (2)
	Char -> L_charac                                   (3)
	String -> L_quoted                                 (4)
	Id -> L_Id                                         (5)
	Program -> ListDef                                 (6)
	ListDef ->                                         (7)
	ListDef -> ListDef Def                             (8)
	Def -> 'inline' Def1                               (9)
	Def -> TDef                                        (10)
	Def -> Var ';'                                     (11)
	Def -> Struct                                      (12)
	Def -> 'using' QConst ';'                          (13)
	Def -> Def1                                        (14)
	Def1 -> Type Id '(' ListArg ')' ';'                (15)
	Def1 -> Type Id '(' ListArg ')' '{' ListStmt '}'   (16)
	Def1 -> '(' Def ')'                                (17)
	ListArg ->                                         (18)
	ListArg -> Arg                                     (19)
	ListArg -> Arg ',' ListArg                         (20)
	ListStmt ->                                        (21)
	ListStmt -> ListStmt Stmt                          (22)
	Stmt -> Expr ';'                                   (23)
	Stmt -> Var ';'                                    (24)
	Stmt -> ';'                                        (25)
	Stmt -> 'return' Expr ';'                          (26)
	Stmt -> 'do' Stmt 'while' '(' Expr ')'             (27)
	Stmt -> 'while' '(' Expr ')' Stmt                  (28)
	Stmt -> 'if' '(' Expr ')' Stmt                     (29)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (30)
	Stmt -> 'for' '(' Var ';' Expr ';' Expr ')' Stmt   (31)
	Stmt -> '{' ListStmt '}'                           (32)
	Stmt -> TDef                                       (33)
	Stmt -> Struct                                     (34)
	Expr16 -> Integer                                  (35)
	Expr16 -> Double                                   (36)
	Expr16 -> Char                                     (37)
	Expr16 -> ListString                               (38)
	Expr16 -> 'true'                                   (39)
	Expr16 -> 'false'                                  (40)
	Expr16 -> QConst                                   (41)
	Expr16 -> '(' Expr ')'                             (42)
	ListString -> String                               (43)
	ListString -> String ListString                    (44)
	Expr15 -> Expr16 '[' Expr ']'                      (45)
	Expr15 -> Expr16 '(' ListExpr ')'                  (46)
	Expr15 -> Expr16                                   (47)
	Expr14 -> Expr14 '.' Expr15                        (48)
	Expr14 -> Expr14 '->' Expr15                       (49)
	Expr14 -> Expr15 '++'                              (50)
	Expr14 -> Expr15 '--'                              (51)
	Expr14 -> '*' Expr15                               (52)
	Expr14 -> Expr15                                   (53)
	Expr13 -> '!' Expr14                               (54)
	Expr13 -> '++' Expr14                              (55)
	Expr13 -> '--' Expr14                              (56)
	Expr13 -> '-' Expr14                               (57)
	Expr13 -> Expr14                                   (58)
	Expr12 -> Expr12 '%' Expr13                        (59)
	Expr12 -> Expr12 '*' Expr13                        (60)
	Expr12 -> Expr12 '/' Expr13                        (61)
	Expr12 -> Expr13                                   (62)
	Expr11 -> Expr11 '+' Expr12                        (63)
	Expr11 -> Expr11 '-' Expr12                        (64)
	Expr11 -> Expr12                                   (65)
	Expr10 -> Expr10 '<<' Expr11                       (66)
	Expr10 -> Expr10 '>>' Expr11                       (67)
	Expr10 -> Expr11                                   (68)
	Expr9 -> Expr9 '<' Expr10                          (69)
	Expr9 -> Expr9 '>' Expr10                          (70)
	Expr9 -> Expr9 '<=' Expr10                         (71)
	Expr9 -> Expr9 '>=' Expr10                         (72)
	Expr9 -> Expr10                                    (73)
	Expr8 -> Expr8 '==' Expr9                          (74)
	Expr8 -> Expr8 '!=' Expr9                          (75)
	Expr8 -> Expr9                                     (76)
	Expr4 -> Expr4 '&&' Expr5                          (77)
	Expr4 -> Expr5                                     (78)
	Expr3 -> Expr3 '||' Expr4                          (79)
	Expr3 -> Expr4                                     (80)
	Expr2 -> Id '=' Expr2                              (81)
	Expr2 -> Id '+=' Expr2                             (82)
	Expr2 -> Id '-=' Expr2                             (83)
	Expr2 -> Expr2 '?' Expr2 ':' Expr2                 (84)
	Expr2 -> Expr3                                     (85)
	Expr1 -> 'throw' Expr2                             (86)
	Expr1 -> Expr2                                     (87)
	Expr -> Expr1                                      (88)
	Expr5 -> Expr6                                     (89)
	Expr6 -> Expr7                                     (90)
	Expr7 -> Expr8                                     (91)
	ListExpr ->                                        (92)
	ListExpr -> Expr                                   (93)
	ListExpr -> Expr ',' ListExpr                      (94)
	Type -> Type '&'                                   (95)
	Type -> 'bool'                                     (96)
	Type -> 'double'                                   (97)
	Type -> 'int'                                      (98)
	Type -> 'void'                                     (99)
	Type -> QConst                                     (100)
	QConst -> ListConst                                (101)
	ListConst -> Const                                 (102)
	ListConst -> Const '::' ListConst                  (103)
	Const -> Id                                        (104)
	Const -> Id '<' ListType '>'                       (105)
	ListType -> Type                                   (106)
	ListType -> Type ',' ListType                      (107)
	TDef -> 'typedef' Type Id ';'                      (108)
	Var -> 'const' Var1                                (109)
	Var -> Var1                                        (110)
	Var1 -> Type Id                                    (111)
	Var1 -> Type Id ',' ListId                         (112)
	Var1 -> Type Id '=' Expr                           (113)
	Var1 -> '(' Var ')'                                (114)
	ListId -> Id                                       (115)
	ListId -> Id ',' ListId                            (116)
	Arg -> 'const' Arg1                                (117)
	Arg -> Arg1                                        (118)
	Arg1 -> Type                                       (119)
	Arg1 -> Type Id                                    (120)
	Arg1 -> Type Id '=' Expr                           (121)
	Arg1 -> '(' Arg ')'                                (122)
	Struct -> 'struct' Id '{' ListDef '}' ';'          (123)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	'+='           { PT _ (TS _ 11) }
	','            { PT _ (TS _ 12) }
	'-'            { PT _ (TS _ 13) }
	'--'           { PT _ (TS _ 14) }
	'-='           { PT _ (TS _ 15) }
	'->'           { PT _ (TS _ 16) }
	'.'            { PT _ (TS _ 17) }
	'/'            { PT _ (TS _ 18) }
	':'            { PT _ (TS _ 19) }
	'::'           { PT _ (TS _ 20) }
	';'            { PT _ (TS _ 21) }
	'<'            { PT _ (TS _ 22) }
	'<<'           { PT _ (TS _ 23) }
	'<='           { PT _ (TS _ 24) }
	'='            { PT _ (TS _ 25) }
	'=='           { PT _ (TS _ 26) }
	'>'            { PT _ (TS _ 27) }
	'>='           { PT _ (TS _ 28) }
	'>>'           { PT _ (TS _ 29) }
	'?'            { PT _ (TS _ 30) }
	'['            { PT _ (TS _ 31) }
	']'            { PT _ (TS _ 32) }
	'bool'         { PT _ (TS _ 33) }
	'const'        { PT _ (TS _ 34) }
	'do'           { PT _ (TS _ 35) }
	'double'       { PT _ (TS _ 36) }
	'else'         { PT _ (TS _ 37) }
	'false'        { PT _ (TS _ 38) }
	'for'          { PT _ (TS _ 39) }
	'if'           { PT _ (TS _ 40) }
	'inline'       { PT _ (TS _ 41) }
	'int'          { PT _ (TS _ 42) }
	'return'       { PT _ (TS _ 43) }
	'struct'       { PT _ (TS _ 44) }
	'throw'        { PT _ (TS _ 45) }
	'true'         { PT _ (TS _ 46) }
	'typedef'      { PT _ (TS _ 47) }
	'using'        { PT _ (TS _ 48) }
	'void'         { PT _ (TS _ 49) }
	'while'        { PT _ (TS _ 50) }
	'{'            { PT _ (TS _ 51) }
	'||'           { PT _ (TS _ 52) }
	'}'            { PT _ (TS _ 53) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_charac       { PT _ (TC $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id _) }
	L_err          { _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Integer         rule  1
	Double          rule  2
	Char            rule  3
	String          rule  4
	Id              rule  5
	Program         rule  6
	ListDef         rules 7, 8
	Def             rules 9, 10, 11, 12, 13, 14
	Def1            rules 15, 16, 17
	ListArg         rules 18, 19, 20
	ListStmt        rules 21, 22
	Stmt            rules 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34
	Expr16          rules 35, 36, 37, 38, 39, 40, 41, 42
	ListString      rules 43, 44
	Expr15          rules 45, 46, 47
	Expr14          rules 48, 49, 50, 51, 52, 53
	Expr13          rules 54, 55, 56, 57, 58
	Expr12          rules 59, 60, 61, 62
	Expr11          rules 63, 64, 65
	Expr10          rules 66, 67, 68
	Expr9           rules 69, 70, 71, 72, 73
	Expr8           rules 74, 75, 76
	Expr4           rules 77, 78
	Expr3           rules 79, 80
	Expr2           rules 81, 82, 83, 84, 85
	Expr1           rules 86, 87
	Expr            rule  88
	Expr5           rule  89
	Expr6           rule  90
	Expr7           rule  91
	ListExpr        rules 92, 93, 94
	Type            rules 95, 96, 97, 98, 99, 100
	QConst          rule  101
	ListConst       rules 102, 103
	Const           rules 104, 105
	ListType        rules 106, 107
	TDef            rule  108
	Var             rules 109, 110
	Var1            rules 111, 112, 113, 114
	ListId          rules 115, 116
	Arg             rules 117, 118
	Arg1            rules 119, 120, 121, 122
	Struct          rule  123

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'('            reduce using rule 7
	'bool'         reduce using rule 7
	'const'        reduce using rule 7
	'double'       reduce using rule 7
	'inline'       reduce using rule 7
	'int'          reduce using rule 7
	'struct'       reduce using rule 7
	'typedef'      reduce using rule 7
	'using'        reduce using rule 7
	'void'         reduce using rule 7
	L_Id           reduce using rule 7
	%eof           reduce using rule 7

	Program        goto state 3
	ListDef        goto state 4

State 1


	L_integ        shift, and enter state 2


State 2

	Integer -> L_integ .                                (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'->'           reduce using rule 1
	'.'            reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<<'           reduce using rule 1
	'<='           reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'>>'           reduce using rule 1
	'?'            reduce using rule 1
	'['            reduce using rule 1
	']'            reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 4

	Program -> ListDef .                                (rule 6)
	ListDef -> ListDef . Def                            (rule 8)

	'('            shift, and enter state 16
	'bool'         shift, and enter state 17
	'const'        shift, and enter state 18
	'double'       shift, and enter state 19
	'inline'       shift, and enter state 20
	'int'          shift, and enter state 21
	'struct'       shift, and enter state 22
	'typedef'      shift, and enter state 23
	'using'        shift, and enter state 24
	'void'         shift, and enter state 25
	L_Id           shift, and enter state 26
	%eof           reduce using rule 6

	Id             goto state 5
	Def            goto state 6
	Def1           goto state 7
	Type           goto state 8
	QConst         goto state 9
	ListConst      goto state 10
	Const          goto state 11
	TDef           goto state 12
	Var            goto state 13
	Var1           goto state 14
	Struct         goto state 15

State 5

	Const -> Id .                                       (rule 104)
	Const -> Id . '<' ListType '>'                      (rule 105)

	'!='           reduce using rule 104
	'%'            reduce using rule 104
	'&'            reduce using rule 104
	'&&'           reduce using rule 104
	'('            reduce using rule 104
	')'            reduce using rule 104
	'*'            reduce using rule 104
	'+'            reduce using rule 104
	'++'           reduce using rule 104
	','            reduce using rule 104
	'-'            reduce using rule 104
	'--'           reduce using rule 104
	'->'           reduce using rule 104
	'.'            reduce using rule 104
	'/'            reduce using rule 104
	':'            reduce using rule 104
	'::'           reduce using rule 104
	';'            reduce using rule 104
	'<'            shift, and enter state 42
			(reduce using rule 104)

	'<<'           reduce using rule 104
	'<='           reduce using rule 104
	'=='           reduce using rule 104
	'>'            reduce using rule 104
	'>='           reduce using rule 104
	'>>'           reduce using rule 104
	'?'            reduce using rule 104
	'['            reduce using rule 104
	']'            reduce using rule 104
	'||'           reduce using rule 104
	L_Id           reduce using rule 104


State 6

	ListDef -> ListDef Def .                            (rule 8)

	'('            reduce using rule 8
	'bool'         reduce using rule 8
	'const'        reduce using rule 8
	'double'       reduce using rule 8
	'inline'       reduce using rule 8
	'int'          reduce using rule 8
	'struct'       reduce using rule 8
	'typedef'      reduce using rule 8
	'using'        reduce using rule 8
	'void'         reduce using rule 8
	'}'            reduce using rule 8
	L_Id           reduce using rule 8
	%eof           reduce using rule 8


State 7

	Def -> Def1 .                                       (rule 14)

	'('            reduce using rule 14
	')'            reduce using rule 14
	'bool'         reduce using rule 14
	'const'        reduce using rule 14
	'double'       reduce using rule 14
	'inline'       reduce using rule 14
	'int'          reduce using rule 14
	'struct'       reduce using rule 14
	'typedef'      reduce using rule 14
	'using'        reduce using rule 14
	'void'         reduce using rule 14
	'}'            reduce using rule 14
	L_Id           reduce using rule 14
	%eof           reduce using rule 14


State 8

	Def1 -> Type . Id '(' ListArg ')' ';'               (rule 15)
	Def1 -> Type . Id '(' ListArg ')' '{' ListStmt '}'    (rule 16)
	Type -> Type . '&'                                  (rule 95)
	Var1 -> Type . Id                                   (rule 111)
	Var1 -> Type . Id ',' ListId                        (rule 112)
	Var1 -> Type . Id '=' Expr                          (rule 113)

	'&'            shift, and enter state 41
	L_Id           shift, and enter state 26

	Id             goto state 40

State 9

	Type -> QConst .                                    (rule 100)

	'&'            reduce using rule 100
	')'            reduce using rule 100
	','            reduce using rule 100
	'>'            reduce using rule 100
	L_Id           reduce using rule 100


State 10

	QConst -> ListConst .                               (rule 101)

	'!='           reduce using rule 101
	'%'            reduce using rule 101
	'&'            reduce using rule 101
	'&&'           reduce using rule 101
	'('            reduce using rule 101
	')'            reduce using rule 101
	'*'            reduce using rule 101
	'+'            reduce using rule 101
	'++'           reduce using rule 101
	','            reduce using rule 101
	'-'            reduce using rule 101
	'--'           reduce using rule 101
	'->'           reduce using rule 101
	'.'            reduce using rule 101
	'/'            reduce using rule 101
	':'            reduce using rule 101
	';'            reduce using rule 101
	'<'            reduce using rule 101
	'<<'           reduce using rule 101
	'<='           reduce using rule 101
	'=='           reduce using rule 101
	'>'            reduce using rule 101
	'>='           reduce using rule 101
	'>>'           reduce using rule 101
	'?'            reduce using rule 101
	'['            reduce using rule 101
	']'            reduce using rule 101
	'||'           reduce using rule 101
	L_Id           reduce using rule 101


State 11

	ListConst -> Const .                                (rule 102)
	ListConst -> Const . '::' ListConst                 (rule 103)

	'!='           reduce using rule 102
	'%'            reduce using rule 102
	'&'            reduce using rule 102
	'&&'           reduce using rule 102
	'('            reduce using rule 102
	')'            reduce using rule 102
	'*'            reduce using rule 102
	'+'            reduce using rule 102
	'++'           reduce using rule 102
	','            reduce using rule 102
	'-'            reduce using rule 102
	'--'           reduce using rule 102
	'->'           reduce using rule 102
	'.'            reduce using rule 102
	'/'            reduce using rule 102
	':'            reduce using rule 102
	'::'           shift, and enter state 39
	';'            reduce using rule 102
	'<'            reduce using rule 102
	'<<'           reduce using rule 102
	'<='           reduce using rule 102
	'=='           reduce using rule 102
	'>'            reduce using rule 102
	'>='           reduce using rule 102
	'>>'           reduce using rule 102
	'?'            reduce using rule 102
	'['            reduce using rule 102
	']'            reduce using rule 102
	'||'           reduce using rule 102
	L_Id           reduce using rule 102


State 12

	Def -> TDef .                                       (rule 10)

	'('            reduce using rule 10
	')'            reduce using rule 10
	'bool'         reduce using rule 10
	'const'        reduce using rule 10
	'double'       reduce using rule 10
	'inline'       reduce using rule 10
	'int'          reduce using rule 10
	'struct'       reduce using rule 10
	'typedef'      reduce using rule 10
	'using'        reduce using rule 10
	'void'         reduce using rule 10
	'}'            reduce using rule 10
	L_Id           reduce using rule 10
	%eof           reduce using rule 10


State 13

	Def -> Var . ';'                                    (rule 11)

	';'            shift, and enter state 38


State 14

	Var -> Var1 .                                       (rule 110)

	')'            reduce using rule 110
	';'            reduce using rule 110


State 15

	Def -> Struct .                                     (rule 12)

	'('            reduce using rule 12
	')'            reduce using rule 12
	'bool'         reduce using rule 12
	'const'        reduce using rule 12
	'double'       reduce using rule 12
	'inline'       reduce using rule 12
	'int'          reduce using rule 12
	'struct'       reduce using rule 12
	'typedef'      reduce using rule 12
	'using'        reduce using rule 12
	'void'         reduce using rule 12
	'}'            reduce using rule 12
	L_Id           reduce using rule 12
	%eof           reduce using rule 12


State 16

	Def1 -> '(' . Def ')'                               (rule 17)
	Var1 -> '(' . Var ')'                               (rule 114)

	'('            shift, and enter state 16
	'bool'         shift, and enter state 17
	'const'        shift, and enter state 18
	'double'       shift, and enter state 19
	'inline'       shift, and enter state 20
	'int'          shift, and enter state 21
	'struct'       shift, and enter state 22
	'typedef'      shift, and enter state 23
	'using'        shift, and enter state 24
	'void'         shift, and enter state 25
	L_Id           shift, and enter state 26

	Id             goto state 5
	Def            goto state 36
	Def1           goto state 7
	Type           goto state 8
	QConst         goto state 9
	ListConst      goto state 10
	Const          goto state 11
	TDef           goto state 12
	Var            goto state 37
	Var1           goto state 14
	Struct         goto state 15

State 17

	Type -> 'bool' .                                    (rule 96)

	'&'            reduce using rule 96
	')'            reduce using rule 96
	','            reduce using rule 96
	'>'            reduce using rule 96
	L_Id           reduce using rule 96


State 18

	Var -> 'const' . Var1                               (rule 109)

	'('            shift, and enter state 35
	'bool'         shift, and enter state 17
	'double'       shift, and enter state 19
	'int'          shift, and enter state 21
	'void'         shift, and enter state 25
	L_Id           shift, and enter state 26

	Id             goto state 5
	Type           goto state 33
	QConst         goto state 9
	ListConst      goto state 10
	Const          goto state 11
	Var1           goto state 34

State 19

	Type -> 'double' .                                  (rule 97)

	'&'            reduce using rule 97
	')'            reduce using rule 97
	','            reduce using rule 97
	'>'            reduce using rule 97
	L_Id           reduce using rule 97


State 20

	Def -> 'inline' . Def1                              (rule 9)

	'('            shift, and enter state 32
	'bool'         shift, and enter state 17
	'double'       shift, and enter state 19
	'int'          shift, and enter state 21
	'void'         shift, and enter state 25
	L_Id           shift, and enter state 26

	Id             goto state 5
	Def1           goto state 30
	Type           goto state 31
	QConst         goto state 9
	ListConst      goto state 10
	Const          goto state 11

State 21

	Type -> 'int' .                                     (rule 98)

	'&'            reduce using rule 98
	')'            reduce using rule 98
	','            reduce using rule 98
	'>'            reduce using rule 98
	L_Id           reduce using rule 98


State 22

	Struct -> 'struct' . Id '{' ListDef '}' ';'         (rule 123)

	L_Id           shift, and enter state 26

	Id             goto state 29

State 23

	TDef -> 'typedef' . Type Id ';'                     (rule 108)

	'bool'         shift, and enter state 17
	'double'       shift, and enter state 19
	'int'          shift, and enter state 21
	'void'         shift, and enter state 25
	L_Id           shift, and enter state 26

	Id             goto state 5
	Type           goto state 28
	QConst         goto state 9
	ListConst      goto state 10
	Const          goto state 11

State 24

	Def -> 'using' . QConst ';'                         (rule 13)

	L_Id           shift, and enter state 26

	Id             goto state 5
	QConst         goto state 27
	ListConst      goto state 10
	Const          goto state 11

State 25

	Type -> 'void' .                                    (rule 99)

	'&'            reduce using rule 99
	')'            reduce using rule 99
	','            reduce using rule 99
	'>'            reduce using rule 99
	L_Id           reduce using rule 99


State 26

	Id -> L_Id .                                        (rule 5)
